--- a/app/src/main/res/layout/event_detail_tlp.xml
+++ b/app/src/main/res/layout/event_detail_tlp.xml
@@ -22,13 +22,6 @@
             android:id="@+id/infos_textView" app:layout_constraintStart_toEndOf="@+id/textView17"
             android:layout_marginStart="8dp"
             app:layout_constraintTop_toTopOf="@+id/textView17" android:fontFamily="@font/quicksand"
-            android:textColor="@android:color/black" app:layout_constraintEnd_toStartOf="@+id/call_Btn"
-            android:layout_marginEnd="24dp"/>
-    <ImageButton
-            android:layout_width="40dp"
-            android:layout_height="40dp" app:srcCompat="@android:drawable/sym_action_call"
-            android:id="@+id/call_Btn" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="32dp"
-            app:layout_constraintTop_toTopOf="@+id/infos_textView"
-            app:layout_constraintBottom_toBottomOf="@+id/infos_textView"/>
+            android:textColor="@android:color/black"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"/>
 </android.support.constraint.ConstraintLayout>
