--- a/app/src/main/res/layout/mission_detail_top.xml
+++ b/app/src/main/res/layout/mission_detail_top.xml
@@ -19,35 +19,40 @@
             app:layout_constraintTop_toTopOf="@+id/banner_imageView"
             app:layout_constraintBottom_toBottomOf="@+id/banner_imageView"
             android:background="#60000000"
-            app:layout_constraintStart_toStartOf="@+id/banner_imageView" app:layout_constraintEnd_toEndOf="@+id/banner_imageView"
+            app:layout_constraintStart_toStartOf="@+id/banner_imageView"
+            app:layout_constraintEnd_toEndOf="@+id/banner_imageView"
     />
     <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="40dp"
-            android:layout_height="40dp" app:srcCompat="@drawable/baseline_person_white_24dp"
-            android:id="@+id/orgPP_imageView" android:layout_marginTop="24dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="24dp"/>
+            android:layout_height="40dp"
+            app:srcCompat="@drawable/baseline_person_white_24dp"
+            android:id="@+id/orgPP_imageView"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="24dp" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/view5"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/org_textView" app:layout_constraintStart_toEndOf="@+id/orgPP_imageView"
             android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="@+id/orgPP_imageView"
-            android:fontFamily="@font/quicksand" android:textColor="@android:color/white"/>
+            android:fontFamily="@font/quicksand" android:textColor="@android:color/black"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/status_textView" app:layout_constraintStart_toStartOf="@+id/org_textView"
             app:layout_constraintTop_toBottomOf="@+id/org_textView" android:textSize="12sp"
-            android:textColor="@android:color/white"/>
+            android:textColor="@android:color/black"/>
     <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/title_textView"
-            app:layout_constraintStart_toStartOf="@+id/view5"
+            app:layout_constraintStart_toStartOf="@+id/orgPP_imageView"
             app:layout_constraintEnd_toEndOf="@+id/view5"
-            app:layout_constraintBottom_toBottomOf="@+id/view5"
             android:textSize="18sp"
-            android:textColor="@android:color/white" android:layout_marginBottom="24dp"
-            android:layout_marginStart="24dp" android:layout_marginEnd="24dp"
-            android:fontFamily="@font/quicksand_bold"/>
+            android:textColor="@android:color/black"
+            android:layout_marginEnd="24dp"
+            android:fontFamily="@font/quicksand_bold"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/orgPP_imageView"/>
 </android.support.constraint.ConstraintLayout>
