--- a/app/src/main/res/layout/mission_list.xml
+++ b/app/src/main/res/layout/mission_list.xml
@@ -5,17 +5,9 @@
 
     <android.support.v7.widget.RecyclerView
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/missionDetail_recyclerView"/>
-    <android.support.design.widget.FloatingActionButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="true" app:srcCompat="@drawable/send"
-            android:id="@+id/mission_fab"
-            android:layout_marginEnd="32dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="32dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:tint="@color/colorAccent"
-            app:backgroundTint="@android:color/black"/>
+            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/missionList_recyclerView"
+            android:background="#101010"/>
 </android.support.constraint.ConstraintLayout>
