--- a/app/src/main/res/layout/mission_main_row.xml
+++ b/app/src/main/res/layout/mission_main_row.xml
@@ -9,7 +9,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:id="@+id/missionMain_card">
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:id="@+id/missionMain_card"
+            app:cardCornerRadius="3dp">
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -30,45 +31,47 @@
                     app:layout_constraintStart_toStartOf="@+id/missionBanner_imageView"
                     app:layout_constraintEnd_toEndOf="@+id/missionBanner_imageView"
                     app:layout_constraintBottom_toBottomOf="@+id/missionBanner_imageView"
-                    android:background="#60000000"/>
+                    android:background="#40000000"/>
             <de.hdodenhof.circleimageview.CircleImageView
                     android:layout_width="40dp"
                     android:layout_height="40dp" app:srcCompat="@drawable/baseline_person_white_24dp"
-                    android:id="@+id/pp_imageView" android:layout_marginTop="16dp"
-                    app:layout_constraintTop_toTopOf="@+id/view4" app:layout_constraintStart_toStartOf="@+id/view4"
-                    android:layout_marginStart="16dp"/>
+                    android:id="@+id/pp_imageView"
+                    app:layout_constraintStart_toStartOf="@+id/view4"
+                    android:layout_marginStart="16dp" android:layout_marginTop="16dp"
+                    app:layout_constraintTop_toBottomOf="@+id/view4"/>
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/organizer_textView"
                     app:layout_constraintTop_toTopOf="@+id/pp_imageView"
                     app:layout_constraintStart_toEndOf="@+id/pp_imageView" android:layout_marginStart="8dp"
-                    android:textColor="@android:color/white" android:fontFamily="@font/quicksand_bold"/>
+                    android:textColor="@android:color/black" android:fontFamily="@font/quicksand_bold"/>
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/status_textView" app:layout_constraintStart_toStartOf="@+id/organizer_textView"
                     android:textSize="12sp"
-                    android:textColor="@android:color/white"
+                    android:textColor="@android:color/black"
                     android:fontFamily="@font/quicksand"
                     app:layout_constraintTop_toBottomOf="@+id/organizer_textView"/>
             <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/title_textView" android:textSize="18sp"
-                    app:layout_constraintStart_toStartOf="@+id/pp_imageView" android:textColor="@android:color/white"
+                    app:layout_constraintStart_toStartOf="@+id/pp_imageView" android:textColor="@android:color/black"
                     android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="@+id/view4"
                     android:fontFamily="@font/quicksand_bold" app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintBottom_toTopOf="@+id/sub_textView"/>
+                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/pp_imageView"/>
             <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:id="@+id/sub_textView" android:layout_marginBottom="16dp"
-                    app:layout_constraintBottom_toBottomOf="@+id/view4"
+                    android:id="@+id/sub_textView"
                     app:layout_constraintStart_toStartOf="@+id/title_textView"
                     app:layout_constraintEnd_toEndOf="@+id/title_textView" android:textSize="14sp"
-                    android:fontFamily="@font/quicksand" android:textColor="@android:color/white"
-            />
+                    android:fontFamily="@font/quicksand" android:textColor="@android:color/black"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintTop_toBottomOf="@+id/title_textView" android:layout_marginBottom="16dp"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
