--- a/app/src/main/res/layout/post_main_row.xml
+++ b/app/src/main/res/layout/post_main_row.xml
@@ -22,8 +22,8 @@
             android:id="@+id/profile_pic_imageView"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@mipmap/ic_launcher_round"/>
@@ -32,7 +32,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="16dp"
             android:singleLine="true"
             android:textColor="@android:color/white"
             android:textSize="14sp"
@@ -52,14 +52,6 @@
             app:layout_constraintTop_toBottomOf="@+id/story_textView"
             tools:srcCompat="@drawable/placeholder1" app:layout_constraintHorizontal_bias="1.0"
     />
-    <View
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:id="@+id/view6" app:layout_constraintStart_toStartOf="@+id/post_main_imageView"
-            app:layout_constraintEnd_toEndOf="@+id/post_main_imageView"
-            android:background="#60000000"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintTop_toBottomOf="@+id/post_main_imageView"/>
     <TextView
             android:id="@+id/story_textView"
             android:layout_width="0dp"
@@ -78,47 +70,38 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             app:srcCompat="@drawable/baseline_favorite_border_white_24dp"
-            app:layout_constraintEnd_toStartOf="@+id/view7" android:layout_marginEnd="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintHorizontal_bias="0.539"
-            app:layout_constraintBottom_toTopOf="@+id/like_counter_textView"/>
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/post_main_imageView"/>
     <TextView
             android:id="@+id/like_counter_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="like"
             android:textColor="@android:color/white"
-            android:textSize="12sp"
+            android:textSize="14sp"
             android:fontFamily="@font/quicksand_light"
-            app:layout_constraintEnd_toEndOf="@+id/like_imageView"
-            app:layout_constraintStart_toStartOf="@+id/like_imageView"
-            app:layout_constraintBottom_toBottomOf="@+id/view6" android:layout_marginBottom="8dp"/>
-    <View
-            android:layout_width="0.2dp"
-            android:layout_height="0dp"
-            android:id="@+id/view7" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            android:layout_marginTop="4dp" app:layout_constraintTop_toTopOf="@+id/like_imageView"
-            app:layout_constraintBottom_toBottomOf="@+id/like_counter_textView" android:layout_marginBottom="4dp"
-            android:background="#606060"/>
+            android:layout_marginBottom="16dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toStartOf="@+id/comment_counter_textView"
+            app:layout_constraintVertical_bias="0.0" app:layout_constraintTop_toTopOf="@+id/comment_counter_textView"/>
     <ImageView
             android:id="@+id/comment_imageView"
             android:layout_width="24dp"
             android:layout_height="24dp"
             app:srcCompat="@drawable/baseline_chat_bubble_outline_white_24dp"
-            app:layout_constraintStart_toEndOf="@+id/view7" android:layout_marginStart="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.503"
-            app:layout_constraintBottom_toTopOf="@+id/comment_counter_textView"/>
+            app:layout_constraintStart_toEndOf="@+id/like_imageView"
+            android:layout_marginStart="16dp"
+            app:layout_constraintTop_toTopOf="@+id/like_imageView"/>
     <TextView
             android:id="@+id/comment_counter_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="comment"
             android:textColor="@android:color/white"
-            android:textSize="12sp"
+            android:textSize="14sp"
             android:fontFamily="@font/quicksand_light"
-            app:layout_constraintStart_toStartOf="@+id/comment_imageView"
-            app:layout_constraintEnd_toEndOf="@+id/comment_imageView"
-            app:layout_constraintBottom_toBottomOf="@+id/like_counter_textView"/>
+            android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/post_main_imageView"/>
 </android.support.constraint.ConstraintLayout>
