--- a/app/src/main/res/layout/profile_main_user_gallery.xml
+++ b/app/src/main/res/layout/profile_main_user_gallery.xml
@@ -14,7 +14,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:cardCornerRadius="3dp"
             app:cardBackgroundColor="@android:color/transparent"
-            app:layout_constraintBottom_toBottomOf="parent">
+            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/userGallery_card">
         <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" app:srcCompat="@drawable/mainlogin"
